  * debian/x2goserver.postinst:
    + Drop duplicate sourcing of debconf includes.

  [ Mihai Moldovan ]
  * New upstream version (4.1.0.4):
    - x2goserver/sbin/x2gocleansessions: add newline before POD block.
    - x2goserver-x2goagent/man/man1/x2goagent.1: add version and date.
    - x2goserver/Makefile: generate man pages from Perl POD.
    - X2Go/Utils.pm: fix missing semicolons.
  * debian/control:
    + Build-depend upon lsb-release for distro version detection.
  * debian/x2goserver.manpages:
    + Install x2gocleansessions man page.

 -- X2Go Release Manager <git-admin@x2go.org>  Thu, 29 Nov 2018 07:57:20 +0100

x2goserver (4.1.0.3-0x2go1) unstable; urgency=medium

  [ Mike Gabriel ]
  * New upstream version (4.1.0.3)
    - x2goserver.service: Add Documentation= key.
    - x2goserver/lib/x2gocheckport: chmod a+x.
    - New bin:pkg: x2goserver-desktopsharing. Move all desktop sharing
      integration logic from x2godesktopsharing to x2goserver src:pkg.
    - Don't rely on "ln -sf" to remove a symlink before recreating it. If the
      target is non-writable, this may fail (observed on a Debian stretch
      system). Thus, removing the symlink file first and then recreating it.
    - Massive white-space cleanup (at EOLs).
    - x2goserver/bin/x2goruncommand: Support IceWM as desktop session type.
  * debian/x2goserver*.dirs:
    + Let dirs have a trailing slash in their path (for the human eye merely).
  * debian/copyright:
    + Regenerate auto-generated copyright.in file.
    + Adopt from recent Debian packaging.
    + Add x2goserver.spec.
  * debian/control:
    + Move xfonts-base from D to R. Thanks lintian.
    + Move C (x2goserver) with versioned x2godesktopsharing, to B.
    + Don't depend on essential package without version. Drop bash from D.
    + Bump Standards-Version: to 4.2.1. No changes needed.
    + Mention "client side printing support" also in descr of bin:pkg
      x2goserver-common.
  * debian/*.postinst: